--- a/index.html
+++ b/index.html
@@ -1,34 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Zsolt Varjú">
+  <meta name="description" content="My first attempt on this Ping coming soon page Frontend mentor challange">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Ping coming soon page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Ping coming soon page</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="main.js" type="module"></script>
+  <script src="https://kit.fontawesome.com/faf7415ea6.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
+  <!-- Header starts here -->
+  <header>
+    <img src="images/logo.svg" alt="" class="header__logo">
+  </header>
+  <!-- Header ends here -->
 
-  We are launching soon!
+  <!-- Main part of the page starts here -->
+  <main>
+    <!-- Header starts here -->
+    <div class="main__header">
+      <h1 class="main__header-title"> We are launching soon!
+      </h1>
+      <p class="main__header-text"> Subscribe and get notified
+      </p>
+    </div>
+    <!-- Main part of the page ends here -->
 
-  Subscribe and get notified
+    <!-- Header in the main part section starts here -->
+    <div class="main__form-wrapper">
+      <form action="submit" class="email-form" id="email-form">
+        <input type="text" name="email" id="email" placeholder="Your email address...">
+        <i></i>
+        <i></i>
+        <small class="email-error">Error message</small>
+      </form>
+      <button class="btn">Notify me</button>
+    </div>
+    <!-- Header in the main part section ends here -->
 
-  Notify Me
+    <!-- Illustration image in the main part section starts here -->
+    <picture>
+      <img src="images/illustration-dashboard.png" alt="Dashboard illustration">
+    </picture>
+    <!-- Illustration image in the main part section ends here -->
 
-  &copy; Copyright Ping. All rights reserved.
+    <!-- Social icons under the illastration image in the main section starts here -->
+    <div class="main__socials">
+      <i></i>
+      <i></i>
+      <i></i>
+    </div>
+  </main>
+  <!-- Social icons under the illastration image in the main section ends here -->
 
+  <!-- Footer starts here -->
   <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+    <p class="footer__text">&copy; Copyright Ping. All rights reserved.</p>
   </footer>
+  <!--Footer ends here -->
+
 </body>
+
 </html>
